--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <div class="container frostedglass col-5" id="rt-archived">
                   <p class="fs-4 runguszone">RoosterTeeth:
                   </p><ol>
+                    <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
                     <li>The Strangerhood <br><a class="alert-link" href="https://archive.org/details/SH_S1">https://archive.org/details/SH_S1</a></li>
                     <li>Happy Hour <br><a class="alert-link" href="https://archive.org/details/chickendentisthappyhour">https://archive.org/details/chickendentisthappyhour</a></li>
                     <li>Captain Dynamic <br><a class="alert-link" href="https://archive.org/details/captain-dynamic">https://archive.org/details/captain-dynamic</a></li>
@@ -113,6 +114,9 @@
                     <li>RT Podcast video (100-230) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-video-2011">https://archive.org/details/roosterteeth-podcast-collection-video-2011</a></li>
                     <li>Free Play <br><a class="alert-link" href="https://archive.org/details/rt-free-play">https://archive.org/details/rt-free-play</a></li>
                     <li>Immersion <br><a class="alert-link" href="https://archive.org/details/immersion-trials-fusion-rooster-teeth-k-2r-xfzyy-1s/Behind+the+Scenes+at+RTX+and+Immersion+-+Horde+Mode+｜+Rooster+Teeth+%5BOZTMZHEWqEo%5D.mp4">https://archive.org/details/immersion...</a></li>
+                    <li>Me Vs. Drunk Me <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me">https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me</a></li>
+                    <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
+                    <li>Burnie's Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
@@ -132,6 +136,7 @@
                     <li>AH 2017 <br><a class="alert-link" href="https://archive.org/details/AchievementHunter_2017">https://archive.org/details/AchievementHunter_2017</a></li>
                     <li>AH 2018 <br><a class="alert-link" href="https://archive.org/details/AchievementHunter_2018">https://archive.org/details/AchievementHunter_2018</a></li>
                     <li>Technical Difficulties <br><a class="alert-link" href="https://archive.org/details/5kqa-4b">https://archive.org/details/5kqa-4b</a></li>
+                    <li>Hardcore Minigolf <br><a class="alert-link" href="https://archive.org/details/minigolf_202403/S01E01+Don't+Talk+To+Me+About+Friendship.mp4">https://archive.org/details/minigolf_202403...</a></li>
                   </ul>
                 </div>
               </div>
