added spot of science

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
                     <li>Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
                     <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
+                    <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
