--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <li>Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
                     <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
                     <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
+                    <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
