--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/custom.css">
     <!-- defer backdrop and icons -->
-    <link rel="preload" href="https://cdn.rungus.zone/v4/css/backdroponly.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/backdroponly.css"></noscript>
+    <link rel="preload" href="https://cdn.rungus.zone/v4/css/rtbg.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/rtbg.css"></noscript>
     <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"></noscript> -->
     <tags>
