--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <span class="runguszone" style="margin-bottom:-0.2rem;">
         <br><a href="https://rungus.zone/terms" class="alert-link">tos</a> - 
         <span class="alert-link">please don't sue me</span>
-        <span class="float-end">❤, rungus</span><br></span>
+        <span class="float-end">❤, rungus & undeadmatrix</span><br></span>
     </div>
   </div>
 </body>
