added buff buddies

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
                     <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
                     <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
+                    <li>Buff Buddies <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Buff-Buddies">https://archive.org/details/Rooster-Teeth-Buff-Buddies</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
@@ -156,7 +157,7 @@
                       <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-funhaus">https://archive.org/details/theater-mode-funhaus</a></li>
                   </ul>
                 </div>
-                <div class="container frostedglass col-5" id="ah-archived">
+                <div class="container frostedglass col-5" id="misc-archived">
                   <p class="fs-4 runguszone">Misc.:
                   </p><ul>
                     <li>Theatre Mode (Cow Chop) <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
