--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <div class="container-fluid z-n1 position-absolute">
     <div class="container">
       <pagelogo>
-          <div class="container">
+          <div class="">
             <!-- top of screen info, used for a welcome message and rungus zone yeah cool -->
-            <div class="">
+            <div class="container frostedglass mt-3 mb-n">
               <p class="text-center m-0"><span class="runguszone siteText">The RT Archive Project</p>        
             </div>
             <!-- can use this for announcements -->
