--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <li>Technical Difficulties <br><a class="alert-link" href="https://archive.org/details/5kqa-4b">https://archive.org/details/5kqa-4b</a></li>
                     <li>Hardcore Minigolf <br><a class="alert-link" href="https://archive.org/details/minigolf_202403/S01E01+Don't+Talk+To+Me+About+Friendship.mp4">https://archive.org/details/minigolf_202403...</a></li>
                     <li>3D Ultra Minigolf Adventures <br><a class="alert-link" href="https://archive.org/details/lets-play-3d-ultra-minigolf-adventures-1-2">https://archive.org/details/lets-play-3d-ultra-minigolf-adventures-1-2</a></li>
+                    <li>The Red Dragon Inn <br><a class="alert-link" href="https://archive.org/details/hardcore-tabletop-presents-the-red-dragon-inn_202403">https://archive.org/details/hardcore-tabletop-presents-the-red-dragon-inn_202403</a></li>
                   </ul>
                 </div>
               </div>
