--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
       <meta property="twitter:image" content="https://cdn.rungus.zone/rt.png" />
     </tags>
   </head>
-</head>
 <body>
   <div class="container-fluid z-n1 position-absolute">
     <div class="container">
       <pagelogo>
           <div class="">
             <!-- top of screen info, used for a welcome message and rungus zone yeah cool -->
-            <div class="container frostedglass mt-3 mb-n">
+            <div class="frostedglass mt-3 mb-n">
               <p class="text-center m-0"><span class="runguszone siteText">The RT Archive Project</p>        
             </div>
             <!-- can use this for announcements -->
@@ -89,14 +88,12 @@
           </div>
       </rowarea> -->
       <rowarea>
-        <div class="container alert frostedglass">
-          <p class="fs-1 text-center runguszone" id="all-done">Archived</p>
+        <!-- <div class="container alert frostedglass"> -->
+          <!-- <p class="fs-1 text-center runguszone" id="all-done">Archived</p>
             <p class="text-center mt-n mb-n runguszone">these things are saved! hooray!</p>
-            <p class="text-center runguszone alert-link">please let <strong>_rungus</strong> on discord know if this list is outdated!</p>
-
-            <div class="row container">
-            <div class="container" id="archived">
-              <div class="row container">
+            <p class="text-center runguszone alert-link">please let <strong>_rungus</strong> on discord know if this list is outdated!</p> -->
+            <div class="container frostedglass pt-3 mb-3" id="archived">
+              <div class="row">
                 <div class="container frostedglass col-5" id="rt-archived">
                   <p class="fs-4 runguszone">RoosterTeeth:
                   </p><ul>
@@ -126,7 +123,7 @@
                 <div class="container frostedglass col-6" id="ah-archived">
                   <p class="fs-4 runguszone">Achievement Hunter:
                   </p><ul>
-                    <li>Theatre Mode 2015 - <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
+                    <li>Theatre Mode 2015 <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
                     <li>Go! <br><a class="alert-link"  href="https://archive.org/details/go-achievement-hunter">https://archive.org/details/go-achievement-hunter</a>
                     <li>VS <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
                     <li>Lets Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
@@ -147,7 +144,7 @@
                 </div>
               </div>
               <br>
-              <div class="row container">
+              <div class="row">
                 <div class="container frostedglass col-6" id="fh-archived">
                   <p class="fs-4 runguszone">Funhaus:
                   </p><ul>
@@ -161,15 +158,7 @@
                   </ul>
                 </div>
                 <div class="container frostedglass col-5" id="misc-archived">
-                  <p class="fs-4 runguszone">Misc.:
-                  </p><ul>
-                    <li>Theatre Mode (Cow Chop) <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
-                  </ul>
-                </div>
-              </div>
-              <br>
-              <div class="row container">
-                <div class="container frostedglass col-6" id="ff-archived">
+                  
                   <p class="fs-4 runguszone">F**kFace:
                   </p><ul>
                     <li>Does It Do? <br><a class="alert-link" href="https://archive.org/details/s-1-e-1-does-it-do-no-stitch">https://archive.org/details/s-1-e-1-does-it-do-no-stitch</a></li>
@@ -177,15 +166,24 @@
                   </ul>
                 </div>
               </div>
+              <br>
+              <div class="row container">
+                <div class="container alert frostedglass col-auto" id="ff-archived">
+                  <p class="fs-4 runguszone">Misc.:
+                  </p><ul>
+                    <li>Theatre Mode (Cow Chop) <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-          </div>
+          
       </rowarea>
       <rowarea>
+        <div class="row container">
         <div class="container alert frostedglass">
             <p class="text-center runguszone">some rt channels are also getting fully dumped on "the eye", go check that out!</p>
             <p class="text-center runguszone mb-n2 fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
-        </div>
+        </div></div>
       </rowarea>
       <!-- <rowarea>
         <div class="container alert frostedglass">
