--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <rowarea>
         <div class="container alert frostedglass">
             <p class="text-center runguszone">Archiving every RoosterTeeth video because WB <em>sucks</em></p>
-            <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a></p>
+            <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> - <a href="https://docs.google.com/spreadsheets/d/17Vqd_xYLh-xma_nw_TkeFexzQ2sZ4uEntibiZB8KlRI/edit?usp=sharing" class="alert-link">Source Document</a></p>
         </div>
       </rowarea>
       <!-- <rowarea>
