use logo from loopspls on discord

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <meta property="og:url" content="https://rungus.zone/roosterteeth/" />
       <meta property="og:title" content="RoosterTeeth Archival Project" />
       <meta property="og:description" content="Archiving Every* RT Video" />
-      <meta property="og:image" content="https://cdn.rungus.zone/rt.png" />
+      <meta property="og:image" content="https://cdn.rungus.zone/rt2.png" />
       <!-- twitter -->
       <!-- of course twitter has their own -->
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="https://rungus.zone/roosterteeth/" />
       <meta property="twitter:title" content="RoosterTeeth Archival Project" />
       <meta property="twitter:description" content="Archiving Every* RT Video" />
-      <meta property="twitter:image" content="https://cdn.rungus.zone/rt.png" />
+      <meta property="twitter:image" content="https://cdn.rungus.zone/rt2.png" />
     </tags>
   </head>
 <body>
