--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <head>
     <!-- these meta tags cannot be nested in a module, so they're out here -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RoosterTeeth Archival Project</title>
-    <meta name="title" content="RoosterTeeth Archival Project" />
+    <title>Archive of Pimps - Rooster Teeth Archival Project</title>
+    <meta name="title" content="Archive of Pimps - Rooster Teeth Archival Project" />
     <meta charset="utf-8">
     <meta name="description" content="Archiving Every* RT Video" />
     <!-- preload critical css first -->
@@ -26,15 +26,15 @@
       <!-- opengraph -->
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://rungus.zone/roosterteeth/" />
-      <meta property="og:title" content="RoosterTeeth Archival Project" />
-      <meta property="og:description" content="Archiving Every* RT Video" />
+      <meta property="og:title" content="Archive of Pimps" />
+      <meta property="og:description" content="Archiving Every* Rooster Teeth Video" />
       <meta property="og:image" content="https://cdn.rungus.zone/rt2.png" />
       <!-- twitter -->
       <!-- of course twitter has their own -->
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="https://rungus.zone/roosterteeth/" />
-      <meta property="twitter:title" content="RoosterTeeth Archival Project" />
-      <meta property="twitter:description" content="Archiving Every* RT Video" />
+      <meta property="twitter:title" content="Archive of Pimps" />
+      <meta property="twitter:description" content="Archiving Every* Rooster Teeth Video" />
       <meta property="twitter:image" content="https://cdn.rungus.zone/rt2.png" />
     </tags>
   </head>
