--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <div class="">
             <!-- top of screen info, used for a welcome message and rungus zone yeah cool -->
             <div class="frostedglass mt-3 mb-n">
-              <p class="text-center m-0"><span class="runguszone siteText">The RT Archive Project</p>        
+              <p class="text-center m-0"><span class="runguszone siteText">Archive of Pimps</p>
+                <p class="fs-5 text-center runguszone">The Rooster Teeth Archival Project</p>        
             </div>
             <!-- can use this for announcements -->
             <br><announcement>
