--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       <meta property="twitter:description" content="Archiving Every* Rooster Teeth Video" />
       <meta property="twitter:image" content="https://cdn.rungus.zone/rt2.png" />
     </tags>
+    <style>
+      li {
+        font-size: 125%;
+        color: white;
+        font-family:roboto slab,serif;
+      }
+
+      .alert-link {
+        font-size: 80%;
+        color: #BABABA;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
   </head>
 <body>
   <div class="container-fluid z-n1 position-absolute">
@@ -60,7 +73,8 @@
       <rowarea>
         <div class="container alert frostedglass">
             <p class="text-center runguszone">Archiving every RoosterTeeth video because WB <em>sucks</em></p>
-            <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> - <a href="https://docs.google.com/spreadsheets/d/17Vqd_xYLh-xma_nw_TkeFexzQ2sZ4uEntibiZB8KlRI/edit?usp=sharing" class="alert-link">Source Document</a></p>
+            <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> 
+              - <a href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing" class="alert-link">Source Document</a></p>
         </div>
       </rowarea>
       <!-- <rowarea>
