--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/custom.css">
     <!-- defer backdrop and icons -->
-    <link rel="preload" href="https://cdn.rungus.zone/v4/css/rtbg.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/rtbg.css"></noscript>
+    <link rel="preload" href="https://cdn.rungus.zone/rt/rtbg.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.rungus.zone/rt/rtbg.css"></noscript>
     <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"></noscript> -->
     <tags>
@@ -28,15 +28,26 @@
       <meta property="og:url" content="https://rungus.zone/roosterteeth/" />
       <meta property="og:title" content="Archive of Pimps" />
       <meta property="og:description" content="Archiving Every* Rooster Teeth Video" />
-      <meta property="og:image" content="https://cdn.rungus.zone/rt2.png" />
+      <meta property="og:image" content="https://cdn.rungus.zone/rt/rt2.png" />
       <!-- twitter -->
       <!-- of course twitter has their own -->
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="https://rungus.zone/roosterteeth/" />
       <meta property="twitter:title" content="Archive of Pimps" />
       <meta property="twitter:description" content="Archiving Every* Rooster Teeth Video" />
-      <meta property="twitter:image" content="https://cdn.rungus.zone/rt2.png" />
+      <meta property="twitter:image" content="https://cdn.rungus.zone/rt/rt2.png" />
     </tags>
+    <icons>
+      <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.rungus.zone/rt/fav/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.rungus.zone/rt/fav/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.rungus.zone/rt/fav/favicon-16x16.png">
+      <link rel="manifest" href="https://cdn.rungus.zone/rt/fav/site.webmanifest">
+      <link rel="mask-icon" href="https://cdn.rungus.zone/rt/fav/safari-pinned-tab.svg" color="#5bbad5">
+      <link rel="shortcut icon" href="https://cdn.rungus.zone/rt/fav/favicon.ico">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="msapplication-config" content="https://cdn.rungus.zone/rt/fav/browserconfig.xml">
+      <meta name="theme-color" content="#ffffff">
+    </icons>
     <style>
       li {
         font-size: 125%;
