we can credit some more people too

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <span class="runguszone" style="margin-bottom:-0.2rem;">
         <br><a href="https://rungus.zone/terms" class="alert-link">tos</a> - 
         <span class="alert-link">please don't sue me</span>
-        <span class="float-end">❤, rungus & undeadmatrix</span><br></span>
+        <span class="float-end">❤, rungus & undeadmatrix (and so many more)</span><br></span>
     </div>
   </div>
 </body>
