added camp camp soundtrack

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                     <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
                     <li>Buff Buddies <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Buff-Buddies">https://archive.org/details/Rooster-Teeth-Buff-Buddies</a></li>
                     <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
+                    <li>Camp Camp s1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
