--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </div>
               <br>
               <div class="row">
-                <div class="container frostedglass col-6" id="fh-archived">
+                <div class="container frostedglass col-5" id="fh-archived">
                   <p class="fs-4 runguszone">Funhaus:
                   </p><ul>
                     <li>Funhaus 2015 <br><a class="alert-link" href="https://archive.org/details/funhaus_2015">https://archive.org/details/funhaus_2015</a></li>
@@ -157,28 +157,27 @@
                       <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-funhaus">https://archive.org/details/theater-mode-funhaus</a></li>
                   </ul>
                 </div>
-                <div class="container frostedglass col-5" id="ff-archived">
+                <div class="container col-6">
                   
-                  <p class="fs-4 runguszone">F**kFace:
-                  </p><ul>
-                    <li>Does It Do? <br><a class="alert-link" href="https://archive.org/details/s-1-e-1-does-it-do-no-stitch">https://archive.org/details/s-1-e-1-does-it-do-no-stitch</a></li>
-                    <li>Regulation Animation <br><a class="alert-link" href="https://archive.org/details/s-1-e-3-banged-up-bike-rides/S1E1+The+Vancouver+Child+Kicker.mp4">https://archive.org/details/s-1-e-3-banged-up-bike-rides...</a></li>
-                  </ul>
-                </div>
-              </div>
-              <br>
-              <div class="row container">
-                <div class="container frostedglass col-5" id="sp7-archived">
-                  <p class="fs-4 runguszone">Sugar Pine 7:
-                  </p><ul>
-                    <li>All SP7 Videos <br><a class="alert-link" href="https://sp7archive.org/">https://sp7archive.org/</a></li>
-                  </ul>
-                </div>
-                <div class="container frostedglass col-6" id="misc-archived">
-                  <p class="fs-4 runguszone">Misc.:
-                  </p><ul>
-                    <li>Theatre Mode (Cow Chop) <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
-                  </ul>
+                  <div class="container mb-3 frostedglass" id="ff-archived">
+                    <p class="fs-4 runguszone">F**kFace:
+                    </p><ul>
+                      <li>Does It Do? <br><a class="alert-link" href="https://archive.org/details/s-1-e-1-does-it-do-no-stitch">https://archive.org/details/s-1-e-1-does-it-do-no-stitch</a></li>
+                      <li>Regulation Animation <br><a class="alert-link" href="https://archive.org/details/s-1-e-3-banged-up-bike-rides/S1E1+The+Vancouver+Child+Kicker.mp4">https://archive.org/details/s-1-e-3-banged-up-bike-rides...</a></li>
+                    </ul>
+                  </div>
+                  <div class="container mb-3 frostedglass" id="sp7-archived">
+                    <p class="fs-4 runguszone">Sugar Pine 7:
+                    </p><ul>
+                      <li>All SP7 Videos <br><a class="alert-link" href="https://sp7archive.org/">https://sp7archive.org/</a></li>
+                    </ul>
+                  </div>
+                  <div class="container frostedglass" id="cc-archived">
+                    <p class="fs-4 runguszone">Cow Chop:
+                    </p><ul>
+                      <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
