added RIP message when Timer runs out

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           }
           if (distance < 0) {
             clearInterval(x);
-            document.getElementById("time").innerHTML = "0 days left :(";
+            document.getElementById("time").innerHTML = "0 days left :(<br>RIP Rooster Teeth";
             document.getElementById("increment").innerHTML = "";
           }
         }, 1000);
