add "nature town"

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     <li>Camp Camp s1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                     <li>Dead Little Roosters <br><a class="alert-link" href="https://archive.org/details/dead-little-roosters">https://archive.org/details/dead-little-roosters</a></li>
                     <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
+                    <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
