--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                     <li>Dead Little Roosters <br><a class="alert-link" href="https://archive.org/details/dead-little-roosters">https://archive.org/details/dead-little-roosters</a></li>
                     <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
                     <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
+                    <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
