--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                     <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
                     <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
                     <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
+                    <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/20240307_20240307_0237">https://archive.org/details/20240307_20240307_0237</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
