--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                     <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
                     <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/20240307_20240307_0237</a></li>
                     <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
+                    <li>Best Friends Today <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
