move bft to their own category

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
                     <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/20240307_20240307_0237</a></li>
                     <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
-                    <li>Best Friends Today <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
+                    
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
@@ -209,6 +209,12 @@
                     <p class="fs-4 runguszone">Sugar Pine 7:
                     </p><ul>
                       <li>All SP7 Videos <br><a class="alert-link" href="https://sp7archive.org/">https://sp7archive.org/</a></li>
+                    </ul>
+                  </div>
+                  <div class="container mb-3 frostedglass" id="sp7-archived">
+                    <p class="fs-4 runguszone">Best Friends Today:
+                    </p><ul>
+                      <li>All(?) BFT Videos <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
                     </ul>
                   </div>
                   <div class="container frostedglass" id="cc-archived">
