--- a/index.html
+++ b/index.html
@@ -136,33 +136,24 @@
                     <li>Red vs Blue: The Blood Gulch Chronicles <br><a class="alert-link" href="https://archive.org/details/blood-gulch-chronicles-2003">https://archive.org/details/blood-gulch-chronicles-2003</a></li>
                     <li>Red vs Blue: Recollection <br><a class="alert-link" href="https://archive.org/details/the-recollection">https://archive.org/details/the-recollection</a></li>
                     <li>RVB Non-remastered s1-8 <br><a class="alert-link" href="https://archive.org/details/red-vs-blue-non-remastered-archive">https://archive.org/details/red-vs-blue-non-remastered-archive</a></li>
-                    <li>Assorted RT Podcasts (Always Open 1-140, On the Spot audio, Off Topic 1-64, Black Box Down 1-42, etc) <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-podcast-network-2021">https://archive.org/details/rooster-teeth-podcast-network-2021</a></li>
-                    <li>RT Podcast (1-235) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-2008">https://archive.org/details/roosterteeth-podcast-collection-2008</a></li>
-                    <li>RT Podcast video (100-230) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-video-2011">https://archive.org/details/roosterteeth-podcast-collection-video-2011</a></li>
                     <li>Free Play <br><a class="alert-link" href="https://archive.org/details/rt-free-play">https://archive.org/details/rt-free-play</a></li>
                     <li>Immersion <br><a class="alert-link" href="https://archive.org/details/immersion-trials-fusion-rooster-teeth-k-2r-xfzyy-1s/Behind+the+Scenes+at+RTX+and+Immersion+-+Horde+Mode+｜+Rooster+Teeth+%5BOZTMZHEWqEo%5D.mp4">https://archive.org/details/immersion...</a></li>
                     <li>Me Vs. Drunk Me <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me">https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me</a></li>
-                    <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
                     <li>Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
                     <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
-                    <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
                     <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
                     <li>Buff Buddies <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Buff-Buddies">https://archive.org/details/Rooster-Teeth-Buff-Buddies</a></li>
-                    <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
-                    <li>Camp Camp s1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                     <li>Dead Little Roosters <br><a class="alert-link" href="https://archive.org/details/dead-little-roosters">https://archive.org/details/dead-little-roosters</a></li>
-                    <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
                     <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
                     <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
                     <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/20240307_20240307_0237</a></li>
                     <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
-                    
                   </ol>
                 </div>
                 <div class="container frostedglass col-6" id="ah-archived">
                   <p class="fs-4 runguszone">Achievement Hunter:
                   </p><ul>
-                    <li>Theatre Mode 2015 <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
+                    <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
                     <li>Go! <br><a class="alert-link"  href="https://archive.org/details/go-achievement-hunter">https://archive.org/details/go-achievement-hunter</a>
                     <li>VS <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
                     <li>Lets Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
@@ -211,16 +202,40 @@
                       <li>All SP7 Videos <br><a class="alert-link" href="https://sp7archive.org/">https://sp7archive.org/</a></li>
                     </ul>
                   </div>
-                  <div class="container mb-3 frostedglass" id="sp7-archived">
+                  <div class="container frostedglass" id="sp7-archived">
                     <p class="fs-4 runguszone">Best Friends Today:
                     </p><ul>
                       <li>All(?) BFT Videos <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
                     </ul>
                   </div>
-                  <div class="container frostedglass" id="cc-archived">
+                </div>
+              </div>
+              <div class="row mt-3">
+                <div class="container frostedglass col-5" id="fh-archived">
+                  <p class="fs-4 runguszone">Podcasts:
+                  </p><ul>
+                    <li>So... Alright <br><a class="alert-link" href="https://archive.org/details/rt-so-alright">https://archive.org/details/rt-so-alright</a></li>
+                    <li>RT Podcast (1-235) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-2008">https://archive.org/details/roosterteeth-podcast-collection-2008</a></li>
+                    <li>RT Podcast video (100-230) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-video-2011">https://archive.org/details/roosterteeth-podcast-collection-video-2011</a></li>
+                    <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
+                    <li>Assorted RT Podcasts (Always Open 1-140, On the Spot audio, Off Topic 1-64, Black Box Down 1-42, etc) <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-podcast-network-2021">https://archive.org/details/rooster-teeth-podcast-network-2021</a></li>
+                    <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
+                    <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
+                    <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
+                  </ul>
+                </div>
+                <div class="container col-6">
+                  
+                  <div class="container mb-3 frostedglass" id="cc-archived">
                     <p class="fs-4 runguszone">Cow Chop:
                     </p><ul>
                       <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
+                    </ul>
+                  </div>
+                  <div class="container mb-3 frostedglass" id="ff-archived">
+                    <p class="fs-4 runguszone">Music:
+                    </p><ul>
+                      <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                     </ul>
                   </div>
                 </div>
