added the RT Livestream to top row

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
             <hr>
             <p class="text-center runguszone">Archiving every RoosterTeeth video because WB <em>sucks</em></p>
             <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> 
-              - <a href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing" class="alert-link">Source Document</a></p>
+              - <a href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing" class="alert-link">Source Document</a>
+               - <a href="https://www.youtube.com/watch?v=61qG9ikd6X8" class="alert-link">RT Announcement Livestream</a></p>
         </div>
       </rowarea>
       <rowarea>
