added community container with avatars

--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
                       <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                     </ul>
                   </div>
+                  <div class="container mb-3 frostedglass" id="com-archived">
+                    <p class="fs-4 runguszone">Community:
+                    </p><ul>
+                      <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
