--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </ul>
                   </div>
                   <div class="container mb-3 frostedglass" id="com-archived">
-                    <p class="fs-4 runguszone">Community:
+                    <p class="fs-4 runguszone">Misc. Stuff:
                     </p><ul>
                       <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
                     </ul>
