--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
         </rowarea>
         <rowarea>
         <div class="container alert frostedglass">
-            <p class="text-center runguszone">some rt channels are also getting fully dumped on "the eye", go check that out!</p>
+            <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
             <p class="text-center runguszone mb-n2 fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
         </div>
       </rowarea>
       <div class="container alert frostedglass" style="color:azure;">
-        <p class="runguszone text-center mb-n2">all content linked on this page is property of their respective owners</p><br>  
+        <p class="runguszone text-center mb-n2">All content linked on this page is property of their respective owners</p><br>  
         <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
         <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
         <span class="alert-link"></span>
