--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li>RWBY vol.1 to vol.5 <br><a class="alert-link" href="https://archive.org/details/rwby-complete-volumes-1-5">https://archive.org/details/rwby-complete-volumes-1-5</a></li>
                 <li>Red vs Blue: The Blood Gulch Chronicles <br><a class="alert-link" href="https://archive.org/details/blood-gulch-chronicles-2003">https://archive.org/details/blood-gulch-chronicles-2003</a></li>
                 <li>Red vs Blue: Recollection <br><a class="alert-link" href="https://archive.org/details/the-recollection">https://archive.org/details/the-recollection</a></li>
-                <li>RVB Non-remastered s1-8 <br><a class="alert-link" href="https://archive.org/details/red-vs-blue-non-remastered-archive">https://archive.org/details/red-vs-blue-non-remastered-archive</a></li>
+                <li>Red vs Blue (non-remastered) S1-8<br><a class="alert-link" href="https://archive.org/details/red-vs-blue-non-remastered-archive">https://archive.org/details/red-vs-blue-non-remastered-archive</a></li>
                 <li>Free Play <br><a class="alert-link" href="https://archive.org/details/rt-free-play">https://archive.org/details/rt-free-play</a></li>
                 <li>Immersion <br><a class="alert-link" href="https://archive.org/details/immersion-trials-fusion-rooster-teeth-k-2r-xfzyy-1s/Behind+the+Scenes+at+RTX+and+Immersion+-+Horde+Mode+｜+Rooster+Teeth+%5BOZTMZHEWqEo%5D.mp4">https://archive.org/details/immersion...</a></li>
                 <li>Me Vs. Drunk Me <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me">https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me</a></li>
@@ -115,7 +115,7 @@
                 <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
                 <li>Go! <br><a class="alert-link"  href="https://archive.org/details/go-achievement-hunter">https://archive.org/details/go-achievement-hunter</a>
                 <li>VS <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
-                <li>Lets Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
+                <li>Let's Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
                 <li>Haunter <br><a class="alert-link" href="https://archive.org/details/achievement-haunter">https://archive.org/details/achievement-haunter</a></li>
                 <li>Worms <br><a class="alert-link" href="https://archive.org/details/lets-play-worms-achievement-hunter">https://archive.org/details/lets-play-worms-achievement-hunter</a></li>
                 <li>AH gameshow games <br><a class="alert-link" href="https://archive.org/details/trivia-and-gameshows-achievement-hunter">https://archive.org/details/trivia-and-gameshows-achievement-hunter</a></li>
