added rtx theater mode

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               <p class="fs-4 runguszone">Achievement Hunter:
               </p><ul>
                 <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
+                <li>RTX 2021 Theatre Mode Live <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode-live-2021">https://archive.org/details/achievement-hunter-theater-mode-live-2021</a></li>
                 <li>Go! <br><a class="alert-link"  href="https://archive.org/details/go-achievement-hunter">https://archive.org/details/go-achievement-hunter</a>
                 <li>VS <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
                 <li>Lets Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
