added enjoy the show after the credits

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                   <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
                   <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
                   <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
+                  <li>Enjoy the Show: After The Credits <br><a class="alert-link" href="https://archive.org/details/enjoy-the-show-after-the-credits">https://archive.org/details/enjoy-the-show-after-the-credits</a></li>
                 </ul>
               </div>
               <div class="container col-6">
